# run_vad

./: .gitignore  README.md  output.json  pyproject.toml
examples/: test.ipynb
run_vad/: __init__.py  main.py  vad.py  vad_data.py
run_vad/vad_unit/: silero.py  webrtcvad.py
